ajuste swagger garage
